<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAzul"
    tools:context=".sandwich">

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/btnAleman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="110dp"
            android:layout_marginRight="30dp"
            android:background="@color/burdeo"
            android:text="@string/aleman"
            android:textColor="#FFC107"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/body"
            android:onClick="aleman"/>

        <Button
            android:id="@+id/btnBarrosJarpa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:background="@color/burdeo"
            android:text="@string/barrosJarpa"
            android:textColor="#FFC107"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="barrosjarpa"/>

        <Button
            android:id="@+id/btnChacarero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:background="@color/burdeo"
            android:text="@string/chacarero"
            android:textColor="#FFC107"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="chacarero"/>

        <Button
            android:id="@+id/btnItaliano"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:background="@color/burdeo"
            android:text="@string/italiano"
            android:textColor="#FFC107"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="italiano"/>

        <Button
            android:id="@+id/btnBarrosLuco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/burdeo"
            android:text="@string/barrosLuco"
            android:textColor="#FFC107"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="barrosluco"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>