<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAzul"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <RelativeLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="319dp"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo"
            android:layout_width="432dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="89dp"
            android:layout_marginLeft="89dp"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="0dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/logoindex"
            app:srcCompat="@drawable/sandwich">

        </androidx.appcompat.widget.AppCompatImageView>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/head"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/btnSandwich"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:background="@color/burdeo"
            android:text="@string/Sandwich"
            android:textColor="#FFC107"
            android:textSize="30sp"
            android:layout_marginBottom="30dp"
            android:onClick="sandwich"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/btnSobreNosotros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/burdeo"
            android:text="@string/sobreNosotros"
            android:textColor="#FFC107"
            android:textSize="30sp"
            android:onClick="acercaDeNosotros"
            tools:ignore="OnClick">

        </Button>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>